src/objects/Jo_Alert__c.object
<CustomObject>
    <description>Admin can configure a new alert or can edit/delete an alert. He can assign or remove access of alerts for each job owner.</description>
    <fields>
        <fullName>Alert_Is_Enabled__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This field will be used to make rules to be enabled or disabled from configuration point of view</description>
        <label>Alert Is Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Alert_Number__c</fullName>
        <label>Alert Number</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>26</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Alert_Type__c</fullName>
        <label>Alert Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Internal</fullName>
                    <default>true</default>
                    <label>Internal</label>
                </value>
                <value>
                    <fullName>External</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assigned_Users__c</fullName>
        <label>Assigned Users</label>
        <summaryForeignKey>Contact_Alert__c.Jo_Alert__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Group_by_query__c</fullName>
        <label>Group by query</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Query_String__c</fullName>
        <label>Query String</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sort__c</fullName>
        <label>Sort</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Alert Master</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Alert_Number__c</columns>
        <columns>NAME</columns>
        <columns>Alert_Type__c</columns>
        <columns>Alert_Is_Enabled__c</columns>
        <columns>Sort__c</columns>
        <columns>Priority__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Jo Alert Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Alerts Master</pluralLabel>
    <recordTypes>
        <fullName>JO_Dashboard</fullName>
        <active>true</active>
        <label>JO Dashboard</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>